--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cypress": "^13.13.3"
+    "cypress": "^13.13.3",
+    "dotenv": "^16.4.5",
+    "node": "^22.7.0"
   }
 }
